# Projet-GES

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pylintrc  LICENCE.txt  Projet-GES.spec  README.md  build.bash  build.bat  build.sh  cmd.bat  compile.bat  compile.sh  docker-compose.yaml  lancement.bat  launch.bash  launch.bat  launch.sh  linux.dockerfile  main.py  pyproject.toml  requirements.txt  setup.py  test.py  tests.py
.github/workflows/: python-app.yml
app/backend/: preload.py
app/components/: __init__.py  messagebox.py  sidebar.py  sidebutton.py
app/components/pages/: __init__.py  graph.py  home.py  map.py
app/frontend/: preload.qml
app/windows/: main.py  preload.py
cache/: request-cache.sqlite
configuration/: install_poetry.sh
data/: regions.geojson
lancement/Linux/: compile.sh  launch.sh
lancement/Windows/: cmd.bat  compile.bat  launch.bat
specs/: build-portable.spec  build.spec  version.txt
utils/: __init__.py  api.py  constants.py  gui.py  libs.py  local_serveur.py  map.py  palette.py
